--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nuxt/content": "^1.15.1",
     "core-js": "^3.15.1",
     "gsap": "^3.9.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "split-type": "^0.3.3"
   },
   "devDependencies": {
     "sass": "^1.48.0",
